--- a/bin/fxml/TraceViewer.fxml
+++ b/bin/fxml/TraceViewer.fxml
@@ -7,6 +7,7 @@
 <?import javafx.scene.control.ProgressIndicator?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -16,8 +17,7 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane prefHeight="582.0" prefWidth="700.0" style="-fx-background-color: white;" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/11.0.1" fx:controller="controller.TraceViewerController">
+<AnchorPane prefHeight="582.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.TraceViewerController">
    <children>
       <VBox layoutX="10.0" layoutY="10.0" prefHeight="120.0" prefWidth="680.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
          <children>
@@ -92,7 +92,7 @@
             <Separator prefWidth="200.0" />
          </children>
       </VBox>
-      <VBox layoutX="10.0" layoutY="144.0" prefHeight="200.0" prefWidth="680.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="144.0">
+      <VBox layoutX="10.0" layoutY="144.0" prefHeight="214.0" prefWidth="680.0" AnchorPane.bottomAnchor="224.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="144.0">
          <children>
             <Label prefHeight="34.0" prefWidth="451.0" text="Filter" textFill="#aa14c4">
                <font>
@@ -127,7 +127,61 @@
                   </Label>
                </children>
             </HBox>
+            <Pane fx:id="customisePane" disable="true" prefHeight="114.0" prefWidth="680.0">
+               <children>
+                  <VBox layoutX="7.0" layoutY="-1.0">
+                     <children>
+                        <Label prefHeight="23.0" prefWidth="142.0" text="Customise  Filter">
+                           <font>
+                              <Font size="14.0" />
+                           </font>
+                        </Label>
+                        <HBox>
+                           <children>
+                              <VBox prefHeight="93.0" prefWidth="306.0">
+                                 <children>
+                                    <HBox alignment="CENTER_LEFT">
+                                       <children>
+                                          <Label text="-Sequence length" />
+                                          <Pane prefHeight="34.0" prefWidth="12.0" />
+                                          <ChoiceBox fx:id="choiceboxSeqLengthComparator" prefHeight="25.0" prefWidth="55.0" />
+                                          <Pane prefHeight="34.0" prefWidth="4.0" />
+                                          <TextField fx:id="txtFieldLength" prefHeight="25.0" prefWidth="136.0" promptText="length" />
+                                       </children>
+                                    </HBox>
+                                    <HBox alignment="CENTER_LEFT" prefHeight="25.0" prefWidth="419.0">
+                                       <children>
+                                          <Label text="-Contains action(s)" />
+                                          <Pane prefHeight="34.0" prefWidth="4.0" />
+                                          <AutoCompleteTextField fx:id="textFieldActions" prefHeight="25.0" prefWidth="198.0" promptText="action1, action2, ...">
+                                             <tooltip>
+                                                <Tooltip text="action names separated by comma" />
+                                             </tooltip>
+                                          </TextField>
+                                       </children>
+                                    </HBox>
+                                    <HBox alignment="CENTER_LEFT">
+                                       <children>
+                                          <Label text="-Action occurence" />
+                                          <Pane prefHeight="34.0" prefWidth="9.0" />
+                                          <ChoiceBox fx:id="choiceboxOccurrenceComparator" prefHeight="25.0" prefWidth="55.0" />
+                                          <Pane prefHeight="34.0" prefWidth="3.0" />
+                                          <TextField prefHeight="25.0" prefWidth="48.0" promptText="0-100" />
+                                          <Pane prefHeight="34.0" prefWidth="3.0" />
+                                          <Label text="\%" />
+                                       </children>
+                                    </HBox>
+                                 </children>
+                              </VBox>
+                              <Separator orientation="VERTICAL" prefHeight="93.0" prefWidth="3.0" />
+                           </children>
+                        </HBox>
+                     </children>
+                  </VBox>
+               </children>
+            </Pane>
          </children>
       </VBox>
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#1f93ff00" height="130.0" layoutX="14.0" layoutY="393.0" stroke="BLACK" strokeLineCap="ROUND" strokeLineJoin="ROUND" strokeType="INSIDE" width="605.0" />
    </children>
 </AnchorPane>
