--- a/src/fxml/TraceViewer.fxml
+++ b/src/fxml/TraceViewer.fxml
@@ -127,7 +127,7 @@
                   </Label>
                </children>
             </HBox>
-            <Pane disable="true" prefHeight="114.0" prefWidth="680.0">
+            <Pane fx:id="customisePane" disable="true" prefHeight="114.0" prefWidth="680.0">
                <children>
                   <VBox layoutX="7.0" layoutY="-1.0">
                      <children>
@@ -144,16 +144,16 @@
                                        <children>
                                           <Label text="-Sequence length" />
                                           <Pane prefHeight="34.0" prefWidth="12.0" />
-                                          <ChoiceBox prefHeight="25.0" prefWidth="67.0" />
+                                          <ChoiceBox fx:id="choiceboxSeqLengthComparator" prefHeight="25.0" prefWidth="55.0" />
                                           <Pane prefHeight="34.0" prefWidth="4.0" />
-                                          <ChoiceBox prefHeight="25.0" prefWidth="72.0" />
+                                          <TextField fx:id="txtFieldLength" prefHeight="25.0" prefWidth="136.0" promptText="length" />
                                        </children>
                                     </HBox>
                                     <HBox alignment="CENTER_LEFT" prefHeight="25.0" prefWidth="419.0">
                                        <children>
                                           <Label text="-Contains action(s)" />
                                           <Pane prefHeight="34.0" prefWidth="4.0" />
-                                          <TextField prefHeight="25.0" prefWidth="198.0" promptText="action1, action2, ...">
+                                          <AutoCompleteTextField fx:id="textFieldActions" prefHeight="25.0" prefWidth="198.0" promptText="action1, action2, ...">
                                              <tooltip>
                                                 <Tooltip text="action names separated by comma" />
                                              </tooltip>
@@ -164,7 +164,7 @@
                                        <children>
                                           <Label text="-Action occurence" />
                                           <Pane prefHeight="34.0" prefWidth="9.0" />
-                                          <ChoiceBox prefHeight="25.0" prefWidth="67.0" />
+                                          <ChoiceBox fx:id="choiceboxOccurrenceComparator" prefHeight="25.0" prefWidth="55.0" />
                                           <Pane prefHeight="34.0" prefWidth="3.0" />
                                           <TextField prefHeight="25.0" prefWidth="48.0" promptText="0-100" />
                                           <Pane prefHeight="34.0" prefWidth="3.0" />
