--- a/bin/fxml/TraceViewer.fxml
+++ b/bin/fxml/TraceViewer.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ProgressIndicator?>
@@ -136,11 +137,12 @@
                               <Font size="14.0" />
                            </font>
                         </Label>
-                        <HBox>
+                        <Pane prefHeight="6.0" prefWidth="317.0" />
+                        <HBox prefHeight="103.0" prefWidth="317.0">
                            <children>
-                              <VBox prefHeight="93.0" prefWidth="306.0">
+                              <VBox prefHeight="93.0" prefWidth="311.0">
                                  <children>
-                                    <HBox alignment="CENTER_LEFT">
+                                    <HBox alignment="CENTER_LEFT" prefHeight="17.0" prefWidth="311.0">
                                        <children>
                                           <Label text="-Sequence length" />
                                           <Pane prefHeight="34.0" prefWidth="12.0" />
@@ -149,18 +151,31 @@
                                           <TextField fx:id="txtFieldLength" prefHeight="25.0" prefWidth="136.0" promptText="length" />
                                        </children>
                                     </HBox>
-                                    <HBox alignment="CENTER_LEFT" prefHeight="25.0" prefWidth="419.0">
+                                    <Pane prefHeight="6.0" prefWidth="317.0" />
+                                    <HBox alignment="CENTER_LEFT" prefHeight="25.0" prefWidth="311.0">
                                        <children>
                                           <Label text="-Contains action(s)" />
-                                          <Pane prefHeight="34.0" prefWidth="4.0" />
-                                          <TextField fx:id="textFieldActions" prefHeight="25.0" prefWidth="198.0" promptText="action1, action2, ...">
-                                             <tooltip>
-                                                <Tooltip text="action names separated by comma" />
-                                             </tooltip>
-                                          </TextField>
+                                          <Pane prefHeight="25.0" prefWidth="5.0" />
+                                          <VBox prefHeight="33.0" prefWidth="197.0">
+                                             <children>
+                                                <TextField fx:id="textFieldActions" prefHeight="25.0" prefWidth="173.0" promptText="action1, action2, ...">
+                                                   <tooltip>
+                                                      <Tooltip text="action names separated by comma" />
+                                                   </tooltip>
+                                                </TextField>
+                                                <Pane prefHeight="0.0" prefWidth="197.0" />
+                                                <HBox>
+                                                   <children>
+                                                      <CheckBox fx:id="checkBoxInOrder" mnemonicParsing="false" prefHeight="17.0" prefWidth="68.0" text="in order" />
+                                                      <CheckBox fx:id="checkboxFromStart" mnemonicParsing="false" text="from start" />
+                                                   </children>
+                                                </HBox>
+                                             </children>
+                                          </VBox>
                                        </children>
                                     </HBox>
-                                    <HBox alignment="CENTER_LEFT">
+                                    <Pane prefHeight="6.0" prefWidth="317.0" />
+                                    <HBox alignment="CENTER_LEFT" prefHeight="3.0" prefWidth="311.0">
                                        <children>
                                           <Label text="-Action occurence" />
                                           <Pane prefHeight="34.0" prefWidth="9.0" />
