--- a/src/fxml/TraceViewer.fxml
+++ b/src/fxml/TraceViewer.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ProgressIndicator?>
@@ -92,7 +93,7 @@
             <Separator prefWidth="200.0" />
          </children>
       </VBox>
-      <VBox layoutX="10.0" layoutY="144.0" prefHeight="214.0" prefWidth="680.0" AnchorPane.bottomAnchor="224.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="144.0">
+      <VBox layoutX="10.0" layoutY="144.0" prefHeight="237.0" prefWidth="680.0" AnchorPane.bottomAnchor="201.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="144.0">
          <children>
             <Label prefHeight="34.0" prefWidth="451.0" text="Filter" textFill="#aa14c4">
                <font>
@@ -127,7 +128,7 @@
                   </Label>
                </children>
             </HBox>
-            <Pane fx:id="customisePane" disable="true" prefHeight="114.0" prefWidth="680.0">
+            <Pane fx:id="customisePane" disable="true" prefHeight="148.0" prefWidth="680.0">
                <children>
                   <VBox layoutX="7.0" layoutY="-1.0">
                      <children>
@@ -136,31 +137,45 @@
                               <Font size="14.0" />
                            </font>
                         </Label>
-                        <HBox>
+                        <Pane prefHeight="6.0" prefWidth="317.0" />
+                        <HBox prefHeight="103.0" prefWidth="362.0">
                            <children>
-                              <VBox prefHeight="93.0" prefWidth="306.0">
+                              <VBox prefHeight="103.0" prefWidth="365.0">
                                  <children>
-                                    <HBox alignment="CENTER_LEFT">
+                                    <HBox alignment="CENTER_LEFT" prefHeight="17.0" prefWidth="311.0">
                                        <children>
                                           <Label text="-Sequence length" />
                                           <Pane prefHeight="34.0" prefWidth="12.0" />
                                           <ChoiceBox fx:id="choiceboxSeqLengthComparator" prefHeight="25.0" prefWidth="55.0" />
                                           <Pane prefHeight="34.0" prefWidth="4.0" />
-                                          <TextField fx:id="txtFieldLength" prefHeight="25.0" prefWidth="136.0" promptText="length" />
+                                          <TextField fx:id="txtFieldLength" prefHeight="25.0" prefWidth="96.0" promptText="length" />
                                        </children>
                                     </HBox>
-                                    <HBox alignment="CENTER_LEFT" prefHeight="25.0" prefWidth="419.0">
+                                    <Pane prefHeight="6.0" prefWidth="317.0" />
+                                    <HBox alignment="CENTER_LEFT" prefHeight="25.0" prefWidth="311.0">
                                        <children>
                                           <Label text="-Contains action(s)" />
-                                          <Pane prefHeight="34.0" prefWidth="4.0" />
-                                          <TextField fx:id="textFieldActions" prefHeight="25.0" prefWidth="198.0" promptText="action1, action2, ...">
-                                             <tooltip>
-                                                <Tooltip text="action names separated by comma" />
-                                             </tooltip>
-                                          </TextField>
+                                          <Pane prefHeight="25.0" prefWidth="5.0" />
+                                          <VBox prefHeight="42.0" prefWidth="245.0">
+                                             <children>
+                                                <TextField fx:id="textFieldActions" prefHeight="25.0" prefWidth="237.0" promptText="action1, action2, ...">
+                                                   <tooltip>
+                                                      <Tooltip text="action names separated by comma" />
+                                                   </tooltip>
+                                                </TextField>
+                                                <Pane prefHeight="0.0" prefWidth="197.0" />
+                                                <HBox>
+                                                   <children>
+                                                      <CheckBox fx:id="checkBoxInOrder" mnemonicParsing="false" prefHeight="17.0" prefWidth="68.0" text="in order" />
+                                                      <CheckBox fx:id="checkboxFromStart" mnemonicParsing="false" text="from start" />
+                                                   </children>
+                                                </HBox>
+                                             </children>
+                                          </VBox>
                                        </children>
                                     </HBox>
-                                    <HBox alignment="CENTER_LEFT">
+                                    <Pane prefHeight="6.0" prefWidth="317.0" />
+                                    <HBox alignment="CENTER_LEFT" prefHeight="3.0" prefWidth="311.0">
                                        <children>
                                           <Label text="-Action occurence" />
                                           <Pane prefHeight="34.0" prefWidth="9.0" />
@@ -182,6 +197,5 @@
             </Pane>
          </children>
       </VBox>
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#1f93ff00" height="130.0" layoutX="14.0" layoutY="393.0" stroke="BLACK" strokeLineCap="ROUND" strokeLineJoin="ROUND" strokeType="INSIDE" width="605.0" />
    </children>
 </AnchorPane>
