--- a/src/fxml/TraceViewer.fxml
+++ b/src/fxml/TraceViewer.fxml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.Cursor?>
+<?import javafx.scene.chart.BarChart?>
+<?import javafx.scene.chart.CategoryAxis?>
+<?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ChoiceBox?>
@@ -18,9 +21,9 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="582.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.TraceViewerController">
+<AnchorPane prefHeight="582.0" prefWidth="1262.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.TraceViewerController">
    <children>
-      <VBox layoutX="10.0" layoutY="10.0">
+      <VBox layoutX="19.0" layoutY="17.0" prefHeight="371.0" prefWidth="681.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="566.0" AnchorPane.topAnchor="15.0">
          <children>
             <VBox prefHeight="138.0" prefWidth="680.0">
                <children>
@@ -131,7 +134,7 @@
                   </HBox>
                   <Pane fx:id="customisePane" disable="true" prefHeight="148.0" prefWidth="680.0">
                      <children>
-                        <VBox layoutX="7.0" layoutY="-1.0">
+                        <VBox layoutX="-2.0" layoutY="-1.0" prefHeight="134.0" prefWidth="373.0">
                            <children>
                               <Label prefHeight="23.0" prefWidth="142.0" text="Customise  Filter">
                                  <font>
@@ -200,6 +203,22 @@
             </VBox>
          </children>
       </VBox>
-      <Pane layoutX="-129.0" layoutY="470.0" prefHeight="8.0" prefWidth="680.0" />
+      <BarChart fx:id="barChartActions" layoutX="696.0" layoutY="31.0" prefHeight="398.0" prefWidth="564.0">
+        <xAxis>
+          <CategoryAxis fx:id="categoryAxis" side="BOTTOM" />
+        </xAxis>
+        <yAxis>
+          <NumberAxis fx:id="numberAxis" side="LEFT" />
+        </yAxis>
+      </BarChart>
+      <HBox layoutX="1003.0" layoutY="543.0" prefHeight="25.0" prefWidth="245.0">
+         <children>
+            <TextField fx:id="textFieldNumofOccurrences" prefHeight="25.0" prefWidth="92.0" promptText="# occurrences" />
+            <Pane prefHeight="25.0" prefWidth="2.0" />
+            <ChoiceBox fx:id="choiceBoxOccurrences" prefHeight="25.0" prefWidth="70.0" />
+            <Pane prefHeight="25.0" prefWidth="2.0" />
+            <Button fx:id="btnRefresh" disable="true" mnemonicParsing="false" onAction="#refreshGraph" prefHeight="25.0" prefWidth="67.0" text="refresh" />
+         </children>
+      </HBox>
    </children>
 </AnchorPane>
