--- a/src/fxml/TraceViewer.fxml
+++ b/src/fxml/TraceViewer.fxml
@@ -23,9 +23,9 @@
 
 <AnchorPane prefHeight="582.0" prefWidth="1262.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.TraceViewerController">
    <children>
-      <VBox layoutX="19.0" layoutY="17.0" prefHeight="371.0" prefWidth="681.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="566.0" AnchorPane.topAnchor="15.0">
+      <VBox layoutX="19.0" layoutY="17.0" prefHeight="451.0" prefWidth="609.0" AnchorPane.leftAnchor="15.0" AnchorPane.rightAnchor="638.0" AnchorPane.topAnchor="15.0">
          <children>
-            <VBox prefHeight="138.0" prefWidth="680.0">
+            <VBox prefHeight="199.0" prefWidth="609.0">
                <children>
                   <Label prefHeight="34.0" prefWidth="451.0" text="Load Traces" textFill="#aa14c4">
                      <font>
@@ -33,7 +33,7 @@
                      </font>
                   </Label>
                   <Pane prefHeight="7.0" prefWidth="452.0" />
-                  <VBox prefHeight="75.0" prefWidth="690.0">
+                  <VBox prefHeight="138.0" prefWidth="609.0">
                      <children>
                         <HBox prefHeight="34.0" prefWidth="456.0">
                            <children>
@@ -92,12 +92,42 @@
                               </Label>
                            </children>
                         </HBox>
+                        <HBox alignment="CENTER_LEFT" prefHeight="40.0" prefWidth="609.0">
+                           <children>
+                              <ImageView fx:id="imgNumOfActions" fitHeight="24.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true" visible="false">
+                                 <image>
+                                    <Image url="@../../bin/resources/images/correct.png" />
+                                 </image>
+                              </ImageView>
+                              <Pane prefHeight="20.0" prefWidth="6.0" />
+                              <Label fx:id="lblNumOfActions" prefHeight="33.0" prefWidth="267.0">
+                                 <font>
+                                    <Font size="14.0" />
+                                 </font>
+                              </Label>
+                           </children>
+                        </HBox>
+                        <HBox alignment="CENTER_LEFT" prefHeight="42.0" prefWidth="609.0">
+                           <children>
+                              <ImageView fx:id="imgNumOfStates" fitHeight="24.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true" visible="false">
+                                 <image>
+                                    <Image url="@../../bin/resources/images/correct.png" />
+                                 </image>
+                              </ImageView>
+                              <Pane prefHeight="20.0" prefWidth="6.0" />
+                              <Label fx:id="lblNumOfStates" prefHeight="33.0" prefWidth="267.0">
+                                 <font>
+                                    <Font size="14.0" />
+                                 </font>
+                              </Label>
+                           </children>
+                        </HBox>
                      </children>
                   </VBox>
                </children>
             </VBox>
             <Separator prefWidth="200.0" />
-            <VBox prefHeight="237.0" prefWidth="680.0">
+            <VBox prefHeight="237.0" prefWidth="609.0">
                <children>
                   <Label prefHeight="34.0" prefWidth="451.0" text="Filter" textFill="#aa14c4">
                      <font>
@@ -107,8 +137,8 @@
                   <HBox prefHeight="32.0" prefWidth="680.0">
                      <children>
                         <ChoiceBox fx:id="choiceboxFilter" prefHeight="37.0" prefWidth="459.0" />
-                        <Pane prefHeight="34.0" prefWidth="9.0" />
-                        <Button fx:id="btnAnalyse" disable="true" mnemonicParsing="false" onAction="#mineTraces" prefHeight="32.0" prefWidth="133.0" text="analyse">
+                        <Pane prefHeight="37.0" prefWidth="20.0" />
+                        <Button fx:id="btnAnalyse" disable="true" mnemonicParsing="false" onAction="#mineTraces" prefHeight="37.0" prefWidth="127.0" text="analyse">
                            <font>
                               <Font size="16.0" />
                            </font>
