--- a/bin/fxml/TraceViewer.fxml
+++ b/bin/fxml/TraceViewer.fxml
@@ -166,7 +166,7 @@
                      <children>
                         <VBox layoutX="-2.0" layoutY="-1.0" prefHeight="134.0" prefWidth="373.0">
                            <children>
-                              <Label prefHeight="23.0" prefWidth="142.0" text="Customise  Filter">
+                              <Label prefHeight="23.0" prefWidth="194.0" text="Customise Traces  Filter">
                                  <font>
                                     <Font size="14.0" />
                                  </font>
@@ -211,7 +211,7 @@
                                           <Pane prefHeight="6.0" prefWidth="317.0" />
                                           <HBox alignment="CENTER_LEFT" prefHeight="3.0" prefWidth="311.0">
                                              <children>
-                                                <Label text="-Action occurence" />
+                                                <Label text="-Action occurrence" />
                                                 <Pane prefHeight="34.0" prefWidth="9.0" />
                                                 <ChoiceBox fx:id="choiceboxOccurrenceComparator" prefHeight="25.0" prefWidth="55.0" />
                                                 <Pane prefHeight="34.0" prefWidth="3.0" />
@@ -241,14 +241,32 @@
           <NumberAxis fx:id="numberAxis" side="LEFT" />
         </yAxis>
       </BarChart>
-      <HBox layoutX="1003.0" layoutY="543.0" prefHeight="25.0" prefWidth="245.0">
+      <VBox layoutX="1036.0" layoutY="479.0" prefHeight="56.0" prefWidth="212.0">
          <children>
-            <TextField fx:id="textFieldNumofOccurrences" prefHeight="25.0" prefWidth="92.0" promptText="# occurrences" />
-            <Pane prefHeight="25.0" prefWidth="2.0" />
-            <ChoiceBox fx:id="choiceBoxOccurrences" prefHeight="25.0" prefWidth="70.0" />
-            <Pane prefHeight="25.0" prefWidth="2.0" />
-            <Button fx:id="btnRefresh" disable="true" mnemonicParsing="false" onAction="#refreshGraph" prefHeight="25.0" prefWidth="67.0" text="refresh" />
+            <HBox alignment="CENTER_LEFT" prefHeight="25.0" prefWidth="226.0">
+               <children>
+                  <Label contentDisplay="CENTER" prefHeight="17.0" prefWidth="80.0" text="Occurrence %" />
+                  <Pane prefHeight="25.0" prefWidth="0.0" />
+                  <ChoiceBox fx:id="choiceBoxOccurrenceFilterPercentage" prefHeight="25.0" prefWidth="57.0" />
+                  <Pane prefHeight="34.0" prefWidth="3.0" />
+                  <TextField fx:id="textFieldOccurrenceFilterPercentage" prefHeight="25.0" prefWidth="48.0" promptText="0-100" />
+                  <Pane prefHeight="34.0" prefWidth="3.0" />
+                  <Label text="\%" />
+               </children>
+            </HBox>
+            <Pane prefHeight="6.0" prefWidth="317.0" />
+            <HBox prefHeight="25.0" prefWidth="231.0">
+               <children>
+                  <Label alignment="CENTER_RIGHT" contentDisplay="CENTER" prefHeight="25.0" prefWidth="32.0" text="Select" />
+                  <Pane prefHeight="34.0" prefWidth="3.0" />
+                  <TextField fx:id="textFieldNumofOccurrences" prefHeight="25.0" prefWidth="92.0" promptText="# occurrences" />
+                  <Pane prefHeight="25.0" prefWidth="2.0" />
+                  <ChoiceBox fx:id="choiceBoxOccurrences" prefHeight="25.0" prefWidth="70.0" />
+                  <Pane prefHeight="25.0" prefWidth="2.0" />
+               </children>
+            </HBox>
          </children>
-      </HBox>
+      </VBox>
+      <Button fx:id="btnRefresh" disable="true" layoutX="1181.0" layoutY="543.0" mnemonicParsing="false" onAction="#refreshGraph" prefHeight="25.0" prefWidth="67.0" text="refresh" />
    </children>
 </AnchorPane>
