--- a/src/fxml/TraceViewer.fxml
+++ b/src/fxml/TraceViewer.fxml
@@ -291,5 +291,6 @@
             </Label>
          </children>
       </HBox>
+      <ChoiceBox fx:id="choiceBoxChartFilterTraces" layoutX="1037.0" layoutY="463.0" prefHeight="25.0" prefWidth="211.0" />
    </children>
 </AnchorPane>
